Fix dark mode with proper color configs and replace all promptboxes with modals

--- a/css/app.css
+++ b/css/app.css
@@ -1861,7 +1861,7 @@
 
     .badge-review {
       background: var(--sky-l);
-      color: #1E3A8A
+      color: #5a85ff;
     }
 
     .badge-approved {
